# qt-qml-cmake-api

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  main.qml  mytype.cc  mytype.h
mylib/: CMakeLists.txt  FramedImage.qml  mytype.cc  mytype.h  qmldir  qrc.qrc
